[package]
name = "sqlx-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { git = "https://github.com/elsirion/sqlx", ref = "2024-04-fix-overflow", rev = "f3a24445127d6a80a2aab58e23036a62630f5154", features = ["runtime-tokio", "any", "sqlite"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.81"